# services

./: .clippy.toml  .dockerignore  .gitignore  .gitmodules  .mcp.json  .mergify.yml  .spectral.yaml  .tombi.toml  .travis.yml  .trivyignore  CLAUDE.md  CONTEXT_DUMP.md  CONTRIBUTING.md  COPYRIGHT.md  Cargo.toml  Dockerfile  Dockerfile.deploy-ci  HANDOFF.md  HANDOFF_PROMPT.md  Justfile  LICENSE-MIT  PR_DESCRIPTION.md  PR_description.md  README.md  REVIEW.md  buffer-tradable-tokens.json  code.sol  codecov.yml  docker-compose.nats.yml  docker-compose.rabbitmq.yml  docker-compose.yaml  driver.config.toml  entrypoint.sh  jest.config.ts  merge_reports.py  openapi.yml  out  package-lock.json  package.json  remove-uniform-clearing-prices.md  (+4 more)
alerter/: Cargo.toml
alerter/src/: main.rs
contracts/: .gitignore  Cargo.toml  README.md  build.rs  rustfmt.toml
contracts/.claude/: settings.local.json
contracts/artifacts/: AnyoneAuthenticator.json  BalancerQueries.json  BalancerV2Authorizer.json  BalancerV2BasePool.json  BalancerV2BasePoolFactory.json  BalancerV2ComposableStablePool.json  BalancerV2ComposableStablePoolFactoryV4.json  BalancerV2LiquidityBootstrappingPool.json  BalancerV2NoProtocolFeeLiquidityBootstrappingPoolFactory.json  BalancerV2StablePool.json  BalancerV2StablePoolFactory.json  BalancerV2StablePoolFactoryV2.json  BalancerV2Vault.json  BalancerV2WeightedPool.json  BalancerV2WeightedPool2TokensFactory.json  BalancerV2WeightedPoolFactory.json  BalancerV2WeightedPoolFactoryV3.json  BalancerV2WeightedPoolFactoryV4.json  BalancerV3BatchRouter.json  Balances.json  ChainalysisOracle.json  CoWSwapEthFlow.json  CoWSwapOnchainOrders.json  Counter.json  CowAmm.json  CowAmmConstantProductFactory.json  CowAmmLegacyHelper.json  CowAmmUniswapV2PriceOracle.json  CowProtocolToken.json  CowSettlementForwarder.json  ERC20.json  ERC20Mintable.json  FlashLoanRouter.json  GPv2AllowListAuthentication.json  GPv2Settlement.json  GasHog.json  GnosisSafe.json  GnosisSafeCompatibilityFallbackHandler.json  GnosisSafeProxy.json  GnosisSafeProxyFactory.json  (+25 more)
contracts/script/: DeploySignatures.s.sol
contracts/solidity/: Balances.sol  Makefile  Solver.sol  Spardose.sol  Trader.sol  TransparentForwarder.sol
contracts/solidity/interfaces/: IERC4626.sol  IVaultRelayer.sol
contracts/solidity/libraries/: Caller.sol  SafeERC20.sol
contracts/solidity/tests/: MockERC4626Wrapper.sol  MockUniswapV3Factory.sol  MockUniswapV3Pool.sol  RemoteERC20Balances.sol
contracts/src/: codegen.rs  lib.rs  main.rs  networks.rs  paths.rs  vendor.rs
crates/account-balances/: Cargo.toml
crates/account-balances/src/: cached.rs  lib.rs  simulation.rs
crates/alerter/: Cargo.toml
crates/alerter/src/: lib.rs  main.rs  shutdown.rs
crates/alloc/: Cargo.toml
crates/alloc/src/: lib.rs
crates/app-data/: Cargo.toml
crates/app-data/src/: app_data.rs  app_data_hash.rs  hooks.rs  lib.rs
crates/autopilot/: Cargo.toml  build.rs  openapi.yml
crates/autopilot/src/: arguments.rs  auction_transaction.rs  circuit_breaker.rs  database.rs  decoded_settlement.rs  driver_api.rs  driver_model.rs  event_updater.rs  leader_lock_tracker.rs  lib.rs  limit_order_quoter.rs  liquidity_pool_initializer.rs  main.rs  maintenance.rs  periodic_db_cleanup.rs  (+8 more)
crates/bad-tokens/: Cargo.toml
crates/balance-overrides/: Cargo.toml
crates/byos/: Cargo.toml  build.rs
crates/bytes-hex/: Cargo.toml
crates/chain/: Cargo.toml
crates/code-fetching/: Cargo.toml
crates/configs/: Cargo.toml
crates/contracts/: .gitignore  Cargo.toml  README.md  build.rs  cannonfile.toml  foundry.toml  networks.json
crates/contracts-generate/: Cargo.toml
crates/cow/: Cargo.toml
crates/cow-amm/: Cargo.toml
crates/database/: Cargo.toml
crates/docker/: Cargo.toml
crates/driver/: Cargo.toml  GUIDELINES.md  README.md  build.rs  compiled-bytecode  example.solvers.toml  example.toml  openapi.yml  out.json  solc-input.json  solvers.example.toml  solvers.example.yaml  vendored-bytecode  verify.json
crates/e2e/: Cargo.toml
crates/eth-domain-types/: Cargo.toml
crates/ethrpc/: Cargo.toml
e2e/: Cargo.toml
e2e/benches/: bench.rs
e2e/tests/: eth_integration.rs  ganache.rs  onchain_settlement.rs  services.rs  settlement_without_onchain_liquidity.rs  smart_contract_orders.rs  uniswap_trade_test.rs  vault_balances.rs
model/: Cargo.toml
model/src/: app_data.rs  appdata_hexadecimal.rs  h160_hexadecimal.rs  h256_hexadecimal.rs  lib.rs  order.rs  presignature.rs  ratio_as_decimal.rs  signature.rs  trade.rs  u256_decimal.rs
orderbook/: Cargo.toml  openapi.yml
orderbook/src/: account_balances.rs  api.rs  bad_token.rs  conversions.rs  database.rs  event_updater.rs  fee.rs  gas_price.rs  integer_conversions.rs  lib.rs  main.rs  metrics.rs  models.rs  orderbook.rs  price_estimate.rs  solvable_orders.rs  storage.rs  trace_many.rs  trade_events.rs  u256_conversions.rs
shared/: Cargo.toml
shared/src/: amm_pair_provider.rs  arguments.rs  balancer.rs  balancer_event_handler.rs  baseline_liquidity.rs  baseline_solver.rs  conversions.rs  current_block.rs  ethcontract_error.rs  event_handling.rs  gas_price_estimation.rs  http.rs  http_transport.rs  lib.rs  macros.rs  maintenance.rs  metrics.rs  network.rs  paraswap_api.rs  paraswap_price_estimator.rs  pool_aggregating.rs  pool_cache.rs  pool_fetching.rs  price_estimate.rs  price_estimation.rs  recent_block_cache.rs  service_registry.rs  sources.rs  subgraph.rs  token_info.rs  token_list.rs  trace_many.rs  tracing.rs  transport.rs  uniswap_pool.rs  uniswap_solver.rs  web3_traits.rs  zeroex_api.rs
solver/: Cargo.toml
solver/src/: baseline_solver.rs  batcher.rs  driver.rs  encoding.rs  ethereum.rs  gas_price_estimation.rs  http_solver.rs  in_flight_orders.rs  interactions.rs  lib.rs  liquidity.rs  liquidity_collector.rs  main.rs  metrics.rs  naive_amm_settlement.rs  naive_solver.rs  oneinch_solver.rs  orderbook.rs  paraswap_solver.rs  pending_transactions.rs  settlement.rs  settlement_simulation.rs  settlement_submission.rs  single_order_solver.rs  solver.rs  testutil.rs  uniswap.rs  uniswap_solver.rs  util.rs
(+2872 files in other folders)
