[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.dependencies]
alloy = { version = "1.1.0", default-features = false }
# alloy-signer was added because eip712 on the regular alloy crate brings way too much stuff with it
# as such, this is a workaround to force feature unification over alloy to the feature set we want
alloy-signer = { version = "1.1.0", default-features = false}
anyhow = "1.0.100"
async-trait = "0.1.80"
axum = "0.6"
bigdecimal = "0.3"
cached = { version = "0.49.3", default-features = false }
chrono = { version = "0.4.38", default-features = false }
clap = { version = "4.5.6", features = ["derive", "env"] }
dashmap = "6.1.0"
derivative = "2.2.0"
derive_more = { version = "1.0.0", features = ["full"] }
ethcontract = { git = "https://github.com/cowprotocol/ethcontract-rs", rev = "8e112a88988040cde6110379ee6d1be768a13244", default-features = false, features = ["aws-kms"] }
mimalloc = "0.1.43"
tikv-jemallocator = { version = "0.6", features = ["unprefixed_malloc_on_supported_platforms", "profiling"] }
jemalloc_pprof = { version = "0.8", features = ["symbolize"] }
flate2 = "1.0.30"
futures = "0.3.30"
const-hex = "1.17.0"
hex-literal = "0.4.1"
http-body = "0.4.6"
humantime = "2.1.0"
humantime-serde = "1.1.1"
hyper = "0.14.29"
indexmap = "2.2.6"
itertools = "0.14"
maplit = "1.0.2"
mockall = "0.12.1"
num = "0.4.3"
primitive-types = "0.12"
prometheus = "0.13.4"
prometheus-metric-storage = "0.5.0"
rand = "0.8.5"
regex = "1.10.4"
reqwest = "0.11.27"
rstest = "0.26"
ruint = { version = "1.17.2", default-features = false }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0.117"
serde_with = "3.8.1"
sqlx = { version = "0.7", default-features = false, features = ["runtime-tokio", "tls-native-tls", "bigdecimal", "chrono", "postgres", "macros"] }
strum = { version = "0.27.2", features = ["derive"] }
tempfile = "3.10.1"
thiserror = "1.0.61"
toml = "0.8.14"
tokio = { version = "1.38.0", features = ["tracing"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json"] }
url = "2.5.0"
warp = { git = 'https://github.com/cowprotocol/warp.git', rev = "586244e", default-features = false }
web3 = { version = "0.19.0", default-features = false }
app-data = { path = "crates/app-data" }
arc-swap = "1.7.1"
async-stream = "0.3.5"
atty = "0.2"
autopilot = { path = "crates/autopilot" }
aws-config = "1.5.1"
aws-sdk-s3 = { version = "1.34.0", default-features = false }
bytes-hex = { path = "crates/bytes-hex" }
chain = { path = "crates/chain" }
console-subscriber = "0.3.0"
const_format = "0.2.32"
contracts = { path = "crates/contracts" }
cow-amm = { path = "crates/cow-amm" }
database = { path = "crates/database" }
driver = { path = "crates/driver" }
ethrpc = { path = "crates/ethrpc" }
model = { path = "crates/model" }
moka = "0.12.10"
multibase = "0.9"
number = { path = "crates/number" }
observe = { path = "crates/observe" }
order-validation = { path = "crates/order-validation" }
opentelemetry = { version = "0.30", features = ["tracing"] }
opentelemetry-otlp = "0.30"
opentelemetry_sdk = "0.30"
orderbook = { path = "crates/orderbook" }
paste = "1.0"
pin-project-lite = "0.2.14"
rate-limit = { path = "crates/rate-limit" }
refunder = { path = "crates/refunder" }
rust_decimal = { version = "1.35.0", default-features = false }
s3 = { path = "crates/s3" }
scopeguard = "1.2.0"
shared = { path = "crates/shared" }
solver = { path = "crates/solver" }
solvers = { path = "crates/solvers" }
solvers-dto = { path = "crates/solvers-dto" }
testlib = { path = "crates/testlib" }
winner-selection = { path = "crates/winner-selection" }
time = "0.3.37"
tiny-keccak = "2.0.2"
tower = "0.4"
tower-http = "0.4"
tracing-opentelemetry = "0.31"
tracing-serde = "0.2"
vergen = "8"
quote = "1.0.41"
syn = "2.0.108"
prettyplease = "0.2.37"
proc-macro2 = "1.0.103"
alloy-sol-macro-input = "1.4.1"
alloy-sol-macro-expander = "1.4.1"
jsonrpc-core = "18.0.0"

[workspace.lints]
clippy.cast_possible_wrap = "deny"
