[workspace]
resolver = "3"
members = ["crates/*"]
exclude = ["contracts/"]

[workspace.dependencies]
account-balances = { path = "crates/account-balances" }
alloy = { version = "1.8.3", default-features = false }
alloy-consensus = { version = "1.8.3", default-features = false }
alloy-contract = { version = "1.8.3", default-features = false }
alloy-dyn-abi = { version = "1.5.7", default-features = false }
alloy-eips = { version = "1.8.3", default-features = false }
alloy-json-abi = { version = "1.5.7", default-features = false }
alloy-json-rpc = { version = "1.8.3", default-features = false }
alloy-network = { version = "1.8.3", default-features = false }
alloy-primitives = { version = "1.5.7", default-features = false }
alloy-provider = { version = "1.8.3", default-features = false }
alloy-rpc-client = { version = "1.8.3", default-features = false }
alloy-rpc-types = { version = "1.8.3", default-features = false }
alloy-rpc-types-eth = { version = "1.8.3", default-features = false }
alloy-rpc-types-trace = { version = "1.8.3", default-features = false }
alloy-signer = { version = "1.8.3", default-features = false }
alloy-signer-local = { version = "1.8.3", default-features = false }
alloy-sol-types = { version = "1.5.7" }
alloy-transport = { version = "1.8.3", default-features = false }
alloy-transport-ws = { version = "1.8.3", default-features = false }
anyhow = "1.0.100"
app-data = { path = "crates/app-data" }
arc-swap = "1.7.1"
async-stream = "0.3.5"
async-trait = "0.1.80"
autopilot = { path = "crates/autopilot" }
aws-config = "1.5.1"
aws-sdk-s3 = { version = "1.34.0", default-features = false }
axum = "0.8"
bad-tokens = { path = "crates/bad-tokens" }
balance-overrides = { path = "crates/balance-overrides" }
base64 = "0.22.1"
bigdecimal = "0.4"
brotli = "8"
bytes = "1.11.1"
bytes-hex = { path = "crates/bytes-hex" }
cached = { version = "0.49.3", default-features = false }
chain = { path = "crates/chain" }
chrono = { version = "0.4.38", default-features = false }
clap = { version = "4.5.6", features = ["derive", "env"] }
configs = { path = "crates/configs/" }
console-subscriber = "0.3.0"
const_format = "0.2.32"
const-hex = "1.17.0"
contracts = { path = "contracts/generated/contracts-facade" }
cow-amm = { path = "crates/cow-amm" }
dashmap = "6.1.0"
database = { path = "crates/database" }
derive_more = { version = "1.0.0", features = ["full"] }
driver = { path = "crates/driver" }
eth-domain-types = { path = "crates/eth-domain-types" }
ethrpc = { path = "crates/ethrpc" }
event-indexing = { path = "crates/event-indexing" }
flate2 = "1.0.30"
futures = "0.3.30"
gas-price-estimation = { path = "crates/gas-price-estimation" }
hex = "0.4.3"
hex-literal = "0.4.1"
hmac = "0.12.1"
http-body = "1"
http-body-util = "0.1"
http-client = { path = "crates/http-client" }
humantime = "2.1.0"
humantime-serde = "1.1.1"
indexmap = "2.2.6"
itertools = "0.14"
jemalloc_pprof = { version = "0.8", features = ["symbolize"] }
jsonrpc-core = "18.0.0"
liquidity-sources = { path = "crates/liquidity-sources" }
maplit = "1.0.2"
mimalloc = "0.1.43"
mockall = "0.12.1"
model = { path = "crates/model" }
moka = "0.12.10"
multibase = "0.9"
num = "0.4.3"
number = { path = "crates/number" }
observe = { path = "crates/observe" }
opentelemetry = { version = "0.31", features = ["tracing"] }
opentelemetry-http = { version = "0.31", default-features = false }  # disable internal-logging
opentelemetry-otlp = "0.31"
opentelemetry_sdk = "0.31"
order-validation = { path = "crates/order-validation" }
orderbook = { path = "crates/orderbook" }
paste = "1.0"
pin-project-lite = "0.2.14"
prettyplease = "0.2.37"
price-estimation = { path = "crates/price-estimation" }
proc-macro2 = "1.0.103"
prometheus = "0.14"
prometheus-metric-storage = "0.6"
quote = "1.0.41"
rand = "0.9.4"
rate-limit = { path = "crates/rate-limit" }
refunder = { path = "crates/refunder" }
regex = "1.10.4"
request-sharing = { path = "crates/request-sharing" }
reqwest = "0.13"
rstest = "0.26"
ruint = { version = "1.17.2", default-features = false }
rust_decimal = { version = "1.35.0", default-features = false }
s3 = { path = "crates/s3" }
scopeguard = "1.2.0"
serde = { version = "1.0.203", features = ["derive"] }
serde-ext = { path = "crates/serde-ext" }
serde_json = "1.0.117"
serde_with = "3.8.1"
sha2 = "0.10"
shared = { path = "crates/shared" }
signature-validator = { path = "crates/signature-validator" }
simulator = { path = "crates/simulator" }
solver = { path = "crates/solver" }
solvers = { path = "crates/solvers" }
solvers-dto = { path = "crates/solvers-dto" }
sqlx = { version = "0.8", default-features = false, features = [
  "bigdecimal",
  "chrono",
  "derive",
  "macros",
  "postgres",
  "runtime-tokio",
  "tls-native-tls"
] }
strum = { version = "0.27.2", features = ["derive"] }
syn = "2.0.108"
tempfile = "3.10.1"
testlib = { path = "crates/testlib" }
thiserror = "1.0.61"
tikv-jemallocator = { version = "0.6", features = ["profiling", "unprefixed_malloc_on_supported_platforms"] }
time = "0.3.47"
token-info = { path = "crates/token-info" }
tokio = { version = "1.38.0", features = ["tracing"] }
tokio-stream = { version = "0.1.15", features = ["sync"] }
toml = "0.8.14"
tower = "0.5"
tower-http = "0.6"
tracing = "0.1.41"
tracing-opentelemetry = "0.32.1"
tracing-serde = "0.2"
tracing-subscriber = { version = "0.3.22", features = ["json"] }
url = "2.5.0"
vergen = "8"
winner-selection = { path = "crates/winner-selection" }

[workspace.lints]
clippy.cast_possible_wrap = "deny"
