[package]
name = "alerter"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
chrono = { version = "0.4", default-features = false }
model = { path = "../model" }
primitive-types = { version = "0.9" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
shared = { path = "../shared" }
structopt = "0.3"
tokio = { version = "1.10", features = ["macros", "time"] }
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.0"
