[package]
name = "contracts"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bin]]
name = "deploy"
required-features = ["bin"]

[[bin]]
name = "vendor"
required-features = ["bin"]

[features]
default = []
bin = [
    "anyhow",
    "env_logger",
    "filetime",
    "ethcontract-generate",
    "log",
    "serde_json",
    "tokio"
]

[dependencies]
ethcontract = { version = "0.15.1",  default-features = false, features = ["http"] }
serde = "1.0"

# [bin-dependencies]
anyhow = { version = "1.0", optional = true }
env_logger = { version = "0.9", optional = true }
ethcontract-generate = { version = "0.15.1", optional = true}
filetime = { version = "0.2.15", optional = true }
log = { version = "0.4", optional = true }
serde_json = { version = "1.0", optional = true }
tokio = { version = "1.10", optional = true, features = ["macros", "rt-multi-thread", "time"] }

[build-dependencies]
ethcontract = { version = "0.15.1",  default-features = false, features = ["http"] }
ethcontract-generate = "0.15.1"
maplit = "1.0"
