[package]
name = "e2e"
version = "1.0.0"
authors = ["Gnosis Developers <developers@gnosis.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
contracts = { path = "../contracts" }
criterion = "0.3"
ethcontract = { version = "0.11",  default-features = false, features = ["http"] }
hex-literal = "0.3"
lazy_static = "1.4"
maplit = "1.0"
model = { path = "../model" }
orderbook = { path = "../orderbook" }
prometheus = "0.12"
rand = "0.8"
reqwest = { version = "0.10", features = ["blocking"] }
secp256k1 = "0.20"
serde_json = "1.0"
shared = { path = "../shared" }
solver = { path = "../solver" }
tokio = { version = "0.2", features = ["macros"] }
web3 = { version = "0.15", default-features = false }
