[package]
name = "e2e"
version = "1.0.0"
authors = ["Gnosis Developers <developers@gnosis.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[[bench]]
name = "bench"
harness = false

[dev-dependencies]
contracts = { path = "../contracts" }
criterion = "0.3"
ethcontract = { git = "https://github.com/gnosis/ethcontract-rs.git", rev = "cafcac443f37cfe1e0e18b03a987a30b61b54695", default-features = false }
hex-literal = "0.3"
lazy_static = "1.4"
maplit = "1.0"
model = { path = "../model" }
orderbook = { path = "../orderbook" }
prometheus = "0.13"
rand = "0.8"
reqwest = { version = "0.11", features = ["blocking"] }
secp256k1 = "0.20"
serde_json = "1.0"
shared = { path = "../shared" }
solver = { path = "../solver" }
tokio = { version = "1.13", features = ["macros"] }
tracing = "0.1"
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", rev="a425fa747bca69c7aede4d2c2828f7267d79227e", default-features = false }
