[package]
name = "orderbook"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
name = "orderbook"
path = "src/lib.rs"

[[bin]]
name = "orderbook"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
assert_approx_eq = "1.1"
bigdecimal = "0.2"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
contracts = { path = "../contracts" }
ethcontract = { version = "0.11", default-features = false }
futures = "0.3.14"
gas-estimation = { git = "https://github.com/gnosis/gp-gas-estimation.git", tag = "v0.1.1", features = ["web3_"] }
hex = { version = "0.4", default-features = false }
hex-literal = "0.3"
maplit = "1.0"
model = { path = "../model" }
num-bigint = "0.3"
primitive-types = { version = "0.8", features = ["fp-conversion"] }
prometheus = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.9", default-features = false, features = ["macros"] }
shared= { path = "../shared" }
sqlx = { version = "0.4", default-features = false, features = ["bigdecimal", "chrono", "macros", "runtime-tokio-native-tls", "postgres"] }
structopt = "0.3"
reqwest = { version = "0.10", features = ["json"] }
thiserror = "1.0"
tokio = { version = "0.2", features = ["macros", "rt-threaded", "sync", "time"] }
tracing = "0.1"
url = "2.2"
warp = "0.2"
web3 = { version = "0.15", default-features = false, features = ["http-tls"] }
num = "0.4"

[dev-dependencies]
secp256k1 = "0.20"
mockall = "0.9"
