[package]
name = "shared"
version = "0.1.0"
edition = "2018"

[dependencies]
anyhow = "1.0"
assert_approx_eq = "1.1"
async-trait = "0.1"
atty = "0.2"
contracts = { path = "../contracts" }
ethcontract = { version = "0.11", default-features = false }
futures = "0.3"
gas-estimation = { git = "https://github.com/gnosis/gp-gas-estimation.git", tag = "v0.1.0", features = ["web3_"] }
hex-literal = "0.3"
maplit = "1.0"
model = { path = "../model" }
num = "0.4"
primitive-types = { version = "0.8" }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0" }
serde_json = "1.0"
structopt = { version = "0.3", default-features = false }
tokio = { version = "0.2", features =["macros", "time"] }
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2"
web3 = { version = "0.15", default-features = false, features = ["http-tls"] }
num-bigint = "0.3"
mockall = "0.9"
