[package]
name = "shared"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = "1.0"
assert_approx_eq = "1.1"
async-trait = "0.1"
atty = "0.2"
contracts = { path = "../contracts" }
derivative = "2.2"
ethcontract = { version = "0.15.1", default-features = false }
ethcontract-mock = "0.15.3"
futures = "0.3"
gas-estimation = { git = "https://github.com/gnosis/gp-gas-estimation.git", tag = "v0.3.1", features = ["web3_", "tokio_"] }
hex = { version = "0.4", default-features = false }
hex-literal = "0.3"
itertools = "0.10"
lazy_static = "1.4.0"
lru = "0.6"
maplit = "1.0"
mockall = "0.10"
model = { path = "../model" }
num = "0.4"
num-bigint = "0.3"
once_cell = "1.8.0"
primitive-types = "0.9"
prometheus = "0.12"
prometheus-metric-storage = "0.1"
reqwest = { version = "0.11", features = ["json"] }
scopeguard = "1.1.0"
serde = "1.0"
serde_json = "1.0"
serde_with = { version = "1.9", default-features = false }
structopt = { version = "0.3", default-features = false }
thiserror = "1.0"
tokio = { version = "1.10", features = ["macros", "time"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = "0.2"
url = "2.2"
warp = "0.3"
web3 = { version = "0.17", default-features = false }

[dev-dependencies]
regex = "1.5.4"
