[package]
name = "solver"
version = "0.1.0"
edition = "2018"

[lib]
name = "solver"
path = "src/lib.rs"

[[bin]]
name = "solver"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
contracts = { path = "../contracts" }
ethcontract = { version = "0.11", default-features = false }
futures = "0.3"
transaction-retry = { git = "https://github.com/gnosis/gp-transaction-retry.git", tag = "v0.1.0" }
gas-estimation = { git = "https://github.com/gnosis/gp-gas-estimation.git", tag = "v0.1.0", features = ["web3_"] }
hex = "0.4"
hex-literal = "0.3"
jsonrpc-core = "16.0"
maplit = "1.0"
model = { path = "../model" }
num = "0.4"
primitive-types = { version = "0.8", features = ["fp-conversion"] }
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.8", default-features = false }
shared = { path = "../shared" }
structopt = { version = "0.3" }
tokio = { version = "0.2", features =["macros", "rt-threaded", "time"] }
tracing = "0.1"
web3 = { version = "0.15", default-features = false, features = ["http-tls"] }
itertools = "0.10"
orderbook= { path = "../orderbook" }

[dev-dependencies]
tracing-subscriber = "0.2"
mockall = "0.9"
