[package]
name = "solver"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
name = "solver"
path = "src/lib.rs"

[[bin]]
name = "solver"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bigdecimal = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
contracts = { path = "../contracts" }
derivative = "2.2"
ethcontract = { version = "0.14.0", default-features = false }
futures = "0.3"
gas-estimation = { git = "https://github.com/gnosis/gp-gas-estimation.git", tag = "v0.3.1", features = ["web3_"] }
hex = "0.4"
hex-literal = "0.3"
itertools = "0.10"
jsonrpc-core = "18.0"
lazy_static = "1.4"
maplit = "1.0"
model = { path = "../model" }
num = "0.4"
orderbook= { path = "../orderbook" }
primitive-types = { version = "0.9", features = ["fp-conversion"] }
prometheus = "0.12"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.9", default-features = false }
shared = { path = "../shared" }
structopt = "0.3"
strum = "0.20"
strum_macros = "0.21"
thiserror = "1.0"
tokio = { version = "1.10", features = ["macros", "rt-multi-thread", "time", "test-util"] }
tracing = "0.1"
transaction-retry = { git = "https://github.com/gnosis/gp-transaction-retry.git", tag = "v0.1.1" }
web3 = { version = "0.17", default-features = false }

[dev-dependencies]
tracing-subscriber = "0.2"
mockall = "0.10"
