[package]
name = "solver"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>"]
edition = "2018"
license = "GPL-3.0-or-later"

[lib]
name = "solver"
path = "src/lib.rs"

[[bin]]
name = "solver"
path = "src/main.rs"

[dependencies]
anyhow = "1.0"
async-trait = "0.1"
bigdecimal = { version = "0.2", features = ["serde"] }
chrono = { version = "0.4", default-features = false, features = ["clock"] }
contracts = { path = "../contracts" }
derivative = "2.2"
derive_more = "0.99"
ethcontract = { git = "https://github.com/gnosis/ethcontract-rs.git", rev = "34c618cf63ad4750d1d9198eada85f3d1cf334ab", default-features = false }
ethcontract-mock = { git = "https://github.com/gnosis/ethcontract-rs.git", rev = "34c618cf63ad4750d1d9198eada85f3d1cf334ab" }
futures = "0.3"
gas-estimation = { git = "https://github.com/gnosis/gp-gas-estimation.git", tag = "v0.3.4", features = ["web3_"] }
hex = "0.4"
hex-literal = "0.3"
itertools = "0.10"
jsonrpc-core = "18.0"
lazy_static = "1.4"
maplit = "1.0"
model = { path = "../model" }
num = "0.4"
primitive-types = { version = "0.9", features = ["fp-conversion"] }
prometheus = "0.13"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = { version = "1.11", default-features = false }
shared = { path = "../shared" }
structopt = "0.3"
strum = { version = "0.22", features = ["derive"] }
thiserror = "1.0"
tokio = { version = "1.12", features = ["macros", "rt-multi-thread", "time", "test-util"] }
tracing = "0.1"
transaction-retry = { git = "https://github.com/gnosis/gp-transaction-retry.git", tag = "v0.2.0" }
web3 = { git = "https://github.com/tomusdrw/rust-web3.git", rev="2e2d1dfa906aa2dff6312b97d0d5ba804e9c8c6e", default-features = false }

[dev-dependencies]
tracing-subscriber = "0.2"
mockall = "0.10"
