[package]
name = "alerter"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>", "Cow Protocol Developers <dev@cow.fi>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
global-metrics = { path = "../global-metrics" }
model = { path = "../model" }
primitive-types = { workspace = true }
prometheus = { workspace = true }
prometheus-metric-storage = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde = { workspace = true }
shared = { path = "../shared" }
strum = { workspace = true }
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
warp = { workspace = true }
