[package]
name = "alerter"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>", "Cow Protocol Developers <dev@cow.fi>"]
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
anyhow = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
observe = { path = "../observe" }
model = { path = "../model" }
number = { path = "../number" }
primitive-types = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_with = { workspace = true }
serde = { workspace = true }
shared = { path = "../shared" }
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
url = { workspace = true }
warp = { workspace = true }

[lints]
workspace = true
