[package]
name = "alerter"
version = "0.1.0"
authors = ["Gnosis Developers <developers@gnosis.io>", "Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
alloy = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
humantime = { workspace = true }
observe = { workspace = true, features = ["axum-tracing"] }
mimalloc = { workspace = true, optional = true }
tikv-jemallocator = { workspace = true }
model = { workspace = true }
number = { workspace = true }
prometheus = { workspace = true }
reqwest = { workspace = true, features = ["json"] }
serde_with = { workspace = true }
serde = { workspace = true }
shared = { workspace = true }
tokio = { workspace = true, features = ["macros", "time", "rt-multi-thread"] }
tracing = { workspace = true }
url = { workspace = true }
axum = { workspace = true }

[lints]
workspace = true

[features]
mimalloc-allocator = ["dep:mimalloc"]
tokio-console = ["observe/tokio-console"]
