[package]
name = "alloc"
version = "0.1.0"
edition = "2021"

[dependencies]
mimalloc = { workspace = true, optional = true }
tcmalloc = { workspace = true, optional = true } # requires libgoogle-perftools-dev and libgoogle-perftools4 packages
tikv-jemallocator = { workspace = true, optional = true }
snmalloc-rs = { workspace = true, optional = true }

[lib]
bench = false
test = false
doctest = false

[lints]
workspace = true

[features]
default = [ "allocator-snmalloc" ]
allocator-mimalloc = [ "dep:mimalloc" ]
allocator-tcmalloc = [ "dep:tcmalloc" ]
allocator-jemalloc = [ "dep:tikv-jemallocator" ]
allocator-snmalloc = [ "dep:snmalloc-rs" ]