[package]
name = "app-data"
version = "0.1.0"
authors = ["Cow Protocol Developers <dev@cow.fi>"]
edition = "2024"
license = "MIT OR Apache-2.0"

[dependencies]
bytes-hex = { workspace = true }
anyhow = { workspace = true }
tiny-keccak = { workspace = true, features = ["keccak"] }
serde = { workspace = true }
serde_json = { workspace = true }
serde_with = { workspace = true }
primitive-types = { workspace = true }
hex = { workspace = true }
hex-literal = { workspace = true }

[dev-dependencies]
ethcontract = { workspace = true }

[features]
test_helpers = []

[lints]
workspace = true
